--- a/index.html
+++ b/index.html
@@ -5,11 +5,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>JAVASCRIPT DIAZ</title>
 </head>
 
 <body>
-    <script src="main1.js"></script>
+    <header>
+        <div id="LentesDesol" class="container row">
+            <h1>Optica Alem</h1>
+            <h2> Lista de precios lentes de sol</h2>
+        </div>
+
+        <div class="Tablas">
+            <table>
+                <tr>
+                    <th>Anteojos</th>
+                    <th>Precio</th>
+                    <th>Stock</th>
+                </tr>
+                <tr>
+                    <td>Anteojos luna</td>
+                    <td>$5000</td>
+                    <td>20 unidades</td>
+                </tr>
+                <tr>
+                    <td>Anteojos Monroe</td>
+                    <td>$20.000</td>
+                    <td>10 unidades</td>
+                </tr>
+                <tr>
+                    <td>Anteojos Reef</td>
+                    <td>12.500</td>
+                    <td>2 unidades</td>
+                </tr>
+
+            </table>
+
+        </div>
+
+</body>
+
+</html>
+</header>
+<script src="main1.js"></script>
 </body>
 
 </html>
